# YMus

./: .gitignore  build.mjs  jest.config.js  manifest.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: macos.yml
YMusProg/: README.md
YMusProg/MacOS/: README.md
YMusProg/Windows/: TZ.md  release-manifest.example.json
YMusProg/Windows/App/src-tauri/: Cargo.toml  tauri.conf.json
YMusProg/Windows/App/src-tauri/capabilities/: default.json
YMusProg/Windows/App/src-tauri/icons/: icon.icns
YMusProg/Windows/App/src-tauri/src/: lib.rs  main.rs
docs/: terms-of-use.docx  terms-of-use.md
src/background/: api-client.ts  background.ts  error-classifier.ts  fetch-progress.ts  flac-meta.ts  format-resolver.ts  id3.ts  logger.ts  message-router.ts  oauth-flow.ts  offscreen-bridge.ts  spotify-aes-decrypt.ts  spotify-audio-keys.ts  spotify-cdn-fetch.ts  spotify-download-handler.ts  spotify-errors.ts  spotify-file-resolver.ts  spotify-filename.ts  spotify-metadata-client.ts  spotify-storage-resolve.ts  spotify-token-capture.ts  spotify-track-id.ts  url-cache.ts  vk-api-client.ts  vk-format-converter.ts  vk-hls-downloader.ts  vk-rate-limiter.ts  vk-session-validator.ts  vk-url-cache.ts  wav-converter.ts  wav-meta.ts  yt-mediabunny-mux.ts  (+3 more)
tests/: build.youtube-revert.test.ts  manifest.test.ts  manifest.youtube-revert.test.ts  message-router.yt.test.ts  progress-ring.accent.test.ts  yt-buffer-capture.bug-condition.test.ts  yt-buffer-capture.test.ts  yt-content.flow.test.ts  yt-filename.test.ts  yt-muxer.test.ts  yt-page-bridge.parse.test.ts
(+184 files in other folders)
