[package]
name = "ymus-desktop"
version = "0.1.0"
description = "YMus extension installer and updater"
authors = ["YMus"]
edition = "2021"

[lib]
name = "ymus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
winreg = "0.55"
